src/wolf/util/logger.h

/* returns a FILE* */
void* wolf_print_stream();
/* returns a FILE* */
void* wolf_error_stream();
/*  stream must be a FILE*! */
bool wolf_retarget_print(void* stream);
/* stream must be a FILE*! */
bool wolf_retarget_error(void* stream);
/* outputs to print stream, prefixed with '[ ]: ' */
void wolf_print    (const char* fmt, ...);
/* outputs to print stream, prefixed with '[ ]: ' and newlined */
void wolf_println  (const char* fmt, ...);
/* outputs to print stream, prefixed with '[-]: ' */
void wolf_notice   (const char* fmt, ...);
/* outputs to print stream, prefixed with '[-]: ' and newlined */
void wolf_noticeln (const char* fmt, ...);
/* outputs to error stream, prefixed with '[*]: ' */
void wolf_warn     (const char* fmt, ...);
/* outputs to error stream, prefixed with '[*]: ' and newlined */
void wolf_warnln   (const char* fmt, ...);
/* outputs to error stream, prefixed with '[!]: ' */
void wolf_error    (const char* fmt, ...);
/* outputs to error stream, prefixed with '[!]: ' and newlined */
void wolf_errorln  (const char* fmt, ...);
/* outputs to print stream, prefixed with '[^]: ' */
void wolf_success  (const char* fmt, ...);
/* outputs to print stream, prefixed with '[^]: ' and newlined */
void wolf_successln(const char* fmt, ...);
/* outputs to print stream */
void wolf_print_raw    (const char* fmt, ...);
/* outputs to print stream and newlined */
void wolf_println_raw  (const char* fmt, ...);
/* outputs to error stream */
void wolf_error_raw   (const char* fmt, ...);
/* outputs to print stream and newlined */
void wolf_errorln_raw (const char* fmt, ...);